--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "@types for gm-mister7",
   "types": "./index.d.ts",
+  "private": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/mushroom-cn/gm-mister7-types/issues"
   },
-  "homepage": "https://github.com/mushroom-cn/gm-mister7-types#readme"
+  "homepage": "https://github.com/mushroom-cn/gm-mister7-types#readme",
+  "publishConfig": {
+    "registry": "http://registry.npmjs.org"
+  }
 }
