--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gm-mister7-types",
-  "version": "1.0.0",
+  "version": "1.0.0-beta",
   "description": "@types for gm-mister7",
   "types": "./index.d.ts",
   "private": false,
