--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -21,11 +21,15 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-
+    - name: NPM install
+      run: |
+        npm install
+      
     - name: Typescript compiler
       # You may pin to the exact commit or the version.
       # uses: iCrawl/action-tsc@c3f25c126c7805dbbbcbf6f1db0c3be6f5dac069
       uses: iCrawl/action-tsc@v1
+      
     - name: NPM Publish
       # You may pin to the exact commit or the version.
       # uses: JS-DevTools/npm-publish@0f451a94170d1699fd50710966d48fb26194d939
